# bevy_flowfield_tiles_plugin

./: .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  clippy.toml  justfile  rustfmt.toml
.github/workflows/: bench.yml  build_linux.yml  build_macos.yml  build_windows.yml  ci.yml  clippy.yml  code-cov.yml  doc-cov.yml
assets/: 2d_actor_blue_sprite.kra  2d_actor_sprite.kra  cost_field.ron  cost_field_impassable.ron  cost_fields.ron  cost_fields_impassable.ron  heightmap.kra  heightmap_variety_costs.kra  sector_cost_field_single.ron  sector_cost_fields.ron  sector_cost_fields_continuous_layout.ron
assets/2d/: 2d_actor_sprite.kra  2d_actor_sprite_large.kra
assets/3d/: 3d_map.blend  3d_map.glb  3d_map.gltf  3d_texture.kra  3d_texture_base.kra  3d_texture_impassable.kra  3d_texture_passable.kra
assets/bench_costfields/: .heightmap_sparse.kra-autosave.kra  csv_gen.py  heightmap_maze.kra  heightmap_sparse.kra
assets/bench_costfields/maze/: 0_9.csv  57_99.csv
assets/bench_costfields/sparse/: 0_0.csv
assets/csv/vis_portals/: 0_0.csv  0_2.csv  1_0.csv
assets/ordinal_icons/: east.kra  east.png~  goal.kra  impassable.kra  impassable.kra~  los.kra  north.kra  north_east.kra  north_west.kra  north_west.png~  portals.kra  south.kra  south.kra~  south.png~  south_east.kra  south_east.png~  south_west.kra  south_west.kra~  south_west.png~  west.kra  west.png~
benches/: calc_flow_maze.rs  calc_flow_open.rs  calc_flow_sparse.rs  calc_route.rs  fib.rs  init_bundle.rs  init_cost_fields.rs  init_portal_graph.rs  init_portals.rs
crates/example_crate/: Cargo.toml
crates/example_crate/src/: lib.rs
crates/examples_utils/: Cargo.toml
crates/examples_utils/src/: _2d.rs  lib.rs
docs/: LICENSE-MIT  cost_field_hill.puml  cost_fields.puml  emblem.kra  field_template.puml  int_field_prop0.puml  int_field_prop1.puml  int_field_prop2.puml  int_field_prop3.puml  int_field_prop_big_example.puml  int_field_prop_hill.puml  int_field_prop_impassable.puml  int_field_sector_to_sector_0.puml  int_field_sector_to_sector_1.puml  int_field_sector_to_sector_2.puml  mindmap.puml  portals.puml  portals_adj.puml  sectors_portals.puml
docs/png/: 30x30_grid.puml.tpl  actor_size_post.kra  actor_size_pre.kra  cost_field.puml  int_field_cost_prop0.puml  int_field_cost_prop1.puml  int_field_cost_prop2.puml  int_field_cost_prop3.puml  int_field_cost_prop4.puml  int_field_cost_prop5.puml  int_field_cost_prop6.puml  int_field_los_prop0.puml  int_field_los_prop1.puml  int_field_los_prop3.puml  int_field_los_prop4.puml  int_field_portal_expand0after.puml  int_field_portal_expand0before.puml  int_field_portal_expand1after.puml  int_field_portal_expand1before.puml  int_field_prop3.puml  int_field_prop_big_example.puml  int_field_prop_big_example.puml.tp1  int_field_prop_big_example.puml.tpl0  int_field_sector_to_sector_0.puml  int_field_sector_to_sector_1.puml  int_field_sector_to_sector_2.puml  sectors.puml
examples/: 2d_complex_movement.rs  2d_continuous.rs  2d_from_mesh.rs  2d_large_actor.rs  2d_multi_actor.rs  2d_multi_actor_controls.rs  2d_mutate_costfields.rs  2d_variety_costs.rs  2d_with_steering.rs  3d_actor_movement.rs  flow_field_right_click.rs  hello.rs  visualise_cost_field.rs  visualise_cost_field_heightmap.rs  visualise_flow_field_tiles.rs  visualise_integration_field.rs  visualise_integration_field_los.rs  visualise_integration_fields.rs  visualise_portals.rs
src/: bundle.rs  lib.rs  main.rs  prelude.rs
src/flowfields/: bundle.rs  cost_field.rs  cost_fields.rs  flow_field.rs  flow_fields.rs  integration_field.rs  integration_fields.rs  mod.rs  plugin.rs  sectors.rs  utilities.rs
src/flowfields/fields/: cost_field.rs  flow_field.rs  integration_field.rs  mod.rs
src/flowfields/portal/: mod.rs  portal_graph.rs  portal_graph_interim.rs  portal_graph_node_edges.rs  portal_graph_old.rs  portals.rs
src/flowfields/sectors/: mod.rs  sector_cost.rs  sector_portals.rs
src/plugin/: cost_layer.rs  flow_layer.rs  mod.rs
tests/: add.rs  construct_each_field.rs
