[workspace.package]
version = "0.1.0"
authors = ["BlondeBurrito"]
edition = "2021"
rust-version = "1.70"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/BlondeBurrito/bevy_flowfield_tiles_plugin"
repository = "https://github.com/BlondeBurrito/bevy_flowfield_tiles_plugin"
keywords = ["navigation", "pathfinding", "bevy"]
categories = ["game-development", "algorithms"]
exclude = [".github/", "crates/", "assets/"]

[workspace]
members = []

# Centralised way of managing versions across all crates and packages
[workspace.dependencies]
bevy = { version = "0.11", default-features = false, features = [ "ktx2", "zstd" ] }
petgraph = "0.6"
serde = { version = "1", features = ["derive"] }
ron = { version = "0.8" }

[package]
name = "bevy_flowfield_tiles_plugin"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "An implementation of FlowField (vector field) pathfinding as a plugin to the Bevy game engine"
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true
publish = false

[dev-dependencies]
criterion = "0.5"
bevy = { workspace = true, default-features = true }

[dependencies]
bevy = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true, optional = true}
ron = { workspace = true, optional = true}

[features]
serde = ["dep:serde"]
ron = ["serde", "dep:ron"]

[profile.dev]
opt-level = 1

[profile.flamegraph]
inherits = "release"
debug = true
strip = false

[profile.release]
codegen-units = 2
# lto = true # slow
strip = true # strip symbols to reduce binary size on linux and mac

[[bench]]
name = "fib"
harness = false

[[example]]
name = "visualise_cost_field"
path = "examples/visualise_cost_field.rs"
required-features = ["ron"]

[[example]]
name = "visualise_integration_field"
path = "examples/visualise_integration_field.rs"
required-features = ["ron"]

[[example]]
name = "visualise_integration_fields"
path = "examples/visualise_integration_fields.rs"
required-features = ["ron"]

[[example]]
name = "visualise_flow_field_tiles"
path = "examples/visualise_flow_field_tiles.rs"
required-features = ["ron"]

[[example]]
name = "flow_field_right_click"
path = "examples/flow_field_right_click.rs"
required-features = ["ron"]

[[example]]
name = "2d_with_steering"
path = "examples/2d_with_steering.rs"
required-features = ["ron"]

[[example]]
name = "2d_multi_actor"
path = "examples/2d_multi_actor.rs"
required-features = ["ron"]

[[example]]
name = "2d_multi_actor_controls"
path = "examples/2d_multi_actor_controls.rs"
required-features = ["ron"]

[[example]]
name = "3d_actor_movement"
path = "examples/3d_actor_movement.rs"
required-features = ["ron"]